# IR_LabProject

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/search_engine/: __init__.py  boolean_retrieval.py  config.py  downloader.py  inverted_index.py  main.py  okapi_bm25.py  text_processor.py  vector_space_model.py
typst/: Markantonatos 22390138-Antivahis 22390289.typ
typst/assets/: references.yaml
